# HybridReverb2

./: .gitattributes  .gitmodules  CMakeLists.txt  HybridReverb2.jucer  JUCE-targets.cmake  LICENSE  README.md
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist
Builds/MacOSX/HybridReverb2.xcodeproj/: project.pbxproj
Builds/VisualStudio2017/: HybridReverb2.sln  HybridReverb2_SharedCode.vcxproj  HybridReverb2_SharedCode.vcxproj.filters  HybridReverb2_StandalonePlugin.vcxproj  HybridReverb2_StandalonePlugin.vcxproj.filters  HybridReverb2_VST.vcxproj  HybridReverb2_VST.vcxproj.filters  HybridReverb2_VST3.vcxproj  resources.rc
CMake/: StaticLinking.cmake
Config/: HybridReverb2.conf.in  partition_wisdom.xml  preferences.xml
I18n/: I18n-HOWTO.txt
I18n/fr/: HybridReverb2.po
I18n/release/: I18nResource_fr
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Scripts/: I18n-release.sh  I18n-update.sh
Source/: ConvolverFactory.cpp  ConvolverFactory.h  HybridConvolver.cpp  HybridConvolver.h  HybridConvolverDual.cpp  HybridConvolverDual.h  HybridConvolverSingle.cpp  HybridConvolverSingle.h  HybridConvolverTripple.cpp  HybridConvolverTripple.h  HybridReverb2Processor.cpp  HybridReverb2Processor.h  I18nTools.h  LagrangeInterpolator.cpp  LagrangeInterpolator.h  MasterAndCommander.cpp  MasterAndCommander.h  Param.h  ParamCategory.h  ParamEnvelope.h  ParamGainDelay.h  ParamImpulseResponses.h  ParamPartitionWisdom.h  ParamPreferences.h  ParamPreset.h  ParamTimbre.h  Partitioner.cpp  Partitioner.h  PresetManager.cpp  PresetManager.h  SampleData.cpp  SampleData.h  SystemConfig.cpp  SystemConfig.h  TextList.h
Source/gui/: AppLookAndFeel.cpp  AppLookAndFeel.h  Definitions.h  DownloadDbComponent.cpp  DownloadDbComponent.h  Editor.cpp  Editor.h  EditorComponent.cpp  EditorComponent.h  FreqPlot.cpp  FreqPlot.h  IRPlot.cpp  IRPlot.h  TabAbout.cpp  TabAbout.h  TabMain.cpp  TabMain.h  TabModulation.cpp  TabModulation.h  TabPreferences.cpp  TabPreferences.h  TabPresetEditor.cpp  TabPresetEditor.h  TabTimbre.cpp  TabTimbre.h  Updater.cpp  Updater.h
Source/libHybridConv/: libHybridConv.c
Source/model/: Parameter.h  PresetCollection.cpp  PresetCollection.h  SampleData.cpp  SampleData.h  SystemConfig.cpp  SystemConfig.h
Source/resources/: hybridreverb2.1  hybridreverb2.desktop  hybridreverb2.fr.1
Source/resources/LV2/: HybridReverb2_LV2.ttl  manifest.ttl  manifest.ttl.in  presets.ttl
Source/standalone/: Jack.cpp  Jack.h
Source/utility/: TextList.cpp  TextList.h  XmlUtil.cpp  XmlUtil.h
